# adzuki

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: android.yml
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/kotlin/com/blackbean/android/: MainActivity.kt
black-bean/: Cargo.toml
black-bean/tests/: integration_tests.rs
kotlin/androidApp/: build.gradle.kts
kotlin/androidApp/src/main/java/uniffi/adzuki/: adzuki.kt
kotlin/androidApp/src/main/kotlin/com/blackbean/android/: MainActivity.kt
kotlin/androidApp/src/main/kotlin/tech/bananajuice/adzuki/android/: MainActivity.kt
kotlin/androidApp/src/test/kotlin/com/blackbean/android/: MainActivityTest.kt
kotlin/androidApp/src/test/kotlin/tech/bananajuice/adzuki/android/: MainActivityTest.kt
kotlin/shared/: build.gradle.kts
kotlin/shared/src/commonMain/kotlin/: Greeting.kt
kotlin/shared/src/commonMain/kotlin/tech/bananajuice/adzuki/shared/mvi/: DocumentEditor.kt  DocumentState.kt  DocumentViewModel.kt
kotlin/shared/src/commonTest/kotlin/: GreetingTest.kt
rust/adzuki/: Cargo.toml  build.rs
rust/adzuki/src/: ast.rs  beancount.llw  beancount_parser.rs  lexer.rs  lib.rs  markdown.llw  parser.rs  plugin.rs  validator.rs
rust/adzuki/tests/: integration_tests.rs  test_bean_check.rs  test_invalid_beancount.rs
rust/adzuki/tests/fixtures/: beancount.md  closed_account.md  unbalanced.md  unsorted_open.md  valid.md
shared/: build.gradle.kts
shared/src/androidMain/: AndroidManifest.xml
